--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html,body{
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color:rgb(43, 45, 57);
 }
 
 canvas{
